--- a/home.html
+++ b/home.html
@@ -59,15 +59,15 @@ li a:hover {
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="la.jpg" alt="Los Angeles" style="width:100%;">
+        <img src="portfolio.1.jpg" alt="" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="chicago.jpg" alt="Chicago" style="width:100%;">
+        <img src="portfolio.2.jpg" alt="" style="width:100%;">
       </div>
     
       <div class="item">
-        <img src="ny.jpg" alt="New york" style="width:100%;">
+        <img src="portfolio.3.jpg" alt="" style="width:100%;">
       </div>
     </div>
 
