--- a/home.html
+++ b/home.html
@@ -28,18 +28,6 @@ li a:hover {
     background-color: #111;
 }
 </style>
-</head>
-<body>
-
-<ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">About</a></li>
-  <li><a href="#contact">Projects</a></li>
-  <li><a href="#about">Contact</a></li>
-</ul>
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -47,41 +35,48 @@ li a:hover {
 </head>
 <body>
 
-<div class="container">
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+  <ul>
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a href="#news">About</a></li>
+    <li><a href="#contact">Projects</a></li>
+    <li><a href="#about">Contact</a></li>
+  </ul>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <img src="portfolio.1.jpg" alt="" style="width:100%;">
+  <div class="container">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="images/portfolio.1.jpg" alt="" style="width:100%;height:50%">
+        </div>
+
+        <div class="item">
+          <img src="images/portfolio.2.jpg" alt="picture" style="width:100%;height:50%">
+        </div>
+      
+        <div class="item">
+          <img src="images/portfolio.3.jpg" alt="picture" style="width:100%;height:50%">
+        </div>
       </div>
 
-      <div class="item">
-        <img src="portfolio.2.jpg" alt="" style="width:100%;">
-      </div>
-    
-      <div class="item">
-        <img src="portfolio.3.jpg" alt="" style="width:100%;">
-      </div>
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
-</div>
 
 </body>
 </html>
