--- a/home.html
+++ b/home.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -37,9 +36,8 @@ li a:hover {
 
   <ul>
     <li><a class="active" href="#home">Home</a></li>
-    <li><a href="#news">About</a></li>
+    <li><a href="about.html">About</a></li>
     <li><a href="#contact">Projects</a></li>
-    <li><a href="#about">Contact</a></li>
   </ul>
 
   <div class="container">
@@ -54,15 +52,15 @@ li a:hover {
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="images/portfolio.1.jpg" alt="" style="width:100%;height:50%">
+          <img src="images/portfolio.1.jpg" alt="picture" style="width:1200px;height:600px;">
         </div>
 
         <div class="item">
-          <img src="images/portfolio.2.jpg" alt="picture" style="width:100%;height:50%">
+          <img src="images/portfolio.5.jpg" alt="picture" style="width:100%;height:600px;">
         </div>
       
         <div class="item">
-          <img src="images/portfolio.3.jpg" alt="picture" style="width:100%;height:50%">
+          <img src="images/portfolio.3.jpg" alt="picture" style="width:1200px;height:600px;">
         </div>
       </div>
 
@@ -77,6 +75,7 @@ li a:hover {
       </a>
     </div>
   </div>
-
+  <h1>Contacts</h1>
+<l1>Email:123456789@gmail.com</l1>
 </body>
 </html>
