--- a/home.html
+++ b/home.html
@@ -31,13 +31,14 @@ li a:hover {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <ul>
-    <li><a class="active" href="#home">Home</a></li>
+    <li><a class="active" href="home.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="#contact">Projects</a></li>
+    <li><a href="projects.html">Projects</a></li>
   </ul>
 
   <div class="container">
@@ -50,19 +51,21 @@ li a:hover {
       </ol>
 
       <!-- Wrapper for slides -->
+      <center>
       <div class="carousel-inner">
         <div class="item active">
-          <img src="images/portfolio.1.jpg" alt="picture" style="width:1200px;height:600px;">
+          <img src="images/portfolio.1.jpg" alt="picture" style="width:600px;height:600px;">
         </div>
 
         <div class="item">
-          <img src="images/portfolio.5.jpg" alt="picture" style="width:100%;height:600px;">
+          <img src="images/portfolio.2.jpg" alt="picture" style="width:1200;height:600px;">
         </div>
-      
+
         <div class="item">
-          <img src="images/portfolio.3.jpg" alt="picture" style="width:1200px;height:600px;">
+          <img src="images/portfolio.3.jpg" alt="picture" style="width:600px;height:600px;">
         </div>
       </div>
+      </center>
 
       <!-- Left and right controls -->
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
