--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,7 @@ li a:hover {
     <li><a class="active" href="home.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="projects.html">Projects</a></li>
+    <li><a href="contacts.html">Contact</a></li>
   </ul>
 
   
