--- a/about.html
+++ b/about.html
@@ -39,18 +39,10 @@ li a:hover {
     <li><a class="active" href="home.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="projects.html">Projects</a></li>
-    <li><a href="contact.html">Projects</a></li>
+    <li><a href="contact.html">Contact</a></li>
   </ul>
   <center>
-      <h1> Fun Facts About Me </h1>
-  </center>
-  <h2> -My name is William Alexander Scruggs Jr 
-  <h2> -Im 16 years old
-  <h2> -My birthday is 09/03/2000
-  <h2> -I am an only child 
-  <h2> -Imma gamer with the luck of the irish
-  <h2> -My gamertags are luckygamer711,luckyguy711 or just lg711   
-
+      
 
 
   
