--- a/projects.html
+++ b/projects.html
@@ -41,8 +41,10 @@ li a:hover {
     <li><a href="projects.html">Projects</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-
-  
+<img src="images/projects.1.jpeg" alt="picture" style="width:400px;height:250px;">
+<img src="images/projects.2.jpg" alt="picture" style="width:400px;height:250px;">
+  <img src="images/projects.4.jpg" alt="picture" style="width:400px;height:250px;">
+  <h2> Music is journey that everyone must travel to. I believe that music is the key to understand people. Music is mor than sound its an extension of ones feelings and thoughts.By listening to other people's music we can become closer on a personal level.That is why we create music. Also we work on various musical projects on different apps such as FL studios and GarageBand.
 
 
   
